--- a/NetBeansProjects/prjinfoX/nbproject/private/private.properties
+++ b/NetBeansProjects/prjinfoX/nbproject/private/private.properties
@@ -1,3 +1,9 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
 file.reference.mysql-connector-java-8.0.29.jar=D:\\ProgramasPastasNaoExcluir\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\Dell Inspiron\\AppData\\Roaming\\NetBeans\\13\\build.properties
