--- a/NetBeansProjects/prjinfoX/nbproject/project.properties
+++ b/NetBeansProjects/prjinfoX/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=prjinfoX
+application.vendor=Dell Inspiron
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,14 +33,16 @@ dist.jar=${dist.dir}/prjinfoX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/prjinfoX
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\Dell Inspiron\\Downloads\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29.jar
 file.reference.mysql-connector-java-8.0.29.jar-1=D:\\ProgramasPastasNaoExcluir\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29.jar
+file.reference.rs2xml.jar=D:\\ProgramasPastasNaoExcluir\\netBeans-rs2xml\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.29.jar}:\
-    ${file.reference.mysql-connector-java-8.0.29.jar-1}
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
