--- a/NetBeansProjects/prjinfoX/nbproject/private/private.properties
+++ b/NetBeansProjects/prjinfoX/nbproject/private/private.properties
@@ -4,6 +4,6 @@ do.jar=true
 do.jlink=false
 file.reference.mysql-connector-java-8.0.29.jar=D:\\ProgramasPastasNaoExcluir\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29.jar
 javac.debug=true
-javadoc.preview=true
+javadoc.preview=false
 jlink.strip=false
 user.properties.file=C:\\Users\\Dell Inspiron\\AppData\\Roaming\\NetBeans\\13\\build.properties
